# vins_mono_notes

./: CMakeLists.txt  README.md  VINS-Mono.kdev4
camera_model/src/camera_models/: CataCamera.cc
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.h
vins_estimator/src/factor/: imu_factor.h  marginalization_factor.cpp  marginalization_factor.h  projection_factor.cpp  projection_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_ex_rotation.h  solve_5pts.cpp
