cmake_minimum_required(VERSION 3.9)
project(VINS_Mono)

set(CMAKE_CXX_STANDARD 11)

add_executable(VINS_Mono
        ar_demo/launch/3dm_bag.launch
        ar_demo/launch/ar_A3.launch
        ar_demo/launch/ar_rviz.launch
        ar_demo/src/ar_demo_node.cpp
        ar_demo/CMakeLists.txt
        ar_demo/package.xml
        benchmark_publisher/config/MH_01_easy/data.csv
        benchmark_publisher/config/MH_02_easy/data.csv
        benchmark_publisher/config/MH_03_medium/data.csv
        benchmark_publisher/config/MH_04_difficult/data.csv
        benchmark_publisher/config/MH_05_difficult/data.csv
        benchmark_publisher/config/V1_01_easy/data.csv
        benchmark_publisher/config/V1_02_medium/data.csv
        benchmark_publisher/config/V1_03_difficult/data.csv
        benchmark_publisher/config/V2_01_easy/data.csv
        benchmark_publisher/config/V2_02_medium/data.csv
        benchmark_publisher/config/V2_03_difficult/data.csv
        benchmark_publisher/launch/publish.launch
        benchmark_publisher/src/benchmark_publisher_node.cpp
        benchmark_publisher/CMakeLists.txt
        benchmark_publisher/package.xml
        camera_model/include/camodocal/calib/CameraCalibration.h
        camera_model/include/camodocal/camera_models/Camera.h
        camera_model/include/camodocal/camera_models/CameraFactory.h
        camera_model/include/camodocal/camera_models/CataCamera.h
        camera_model/include/camodocal/camera_models/CostFunctionFactory.h
        camera_model/include/camodocal/camera_models/EquidistantCamera.h
        camera_model/include/camodocal/camera_models/PinholeCamera.h
        camera_model/include/camodocal/camera_models/ScaramuzzaCamera.h
        camera_model/include/camodocal/chessboard/Chessboard.h
        camera_model/include/camodocal/chessboard/ChessboardCorner.h
        camera_model/include/camodocal/chessboard/ChessboardQuad.h
        camera_model/include/camodocal/chessboard/Spline.h
        camera_model/include/camodocal/gpl/EigenQuaternionParameterization.h
        camera_model/include/camodocal/gpl/EigenUtils.h
        camera_model/include/camodocal/gpl/gpl.h
        camera_model/include/camodocal/sparse_graph/Transform.h
        camera_model/src/calib/CameraCalibration.cc
        camera_model/src/camera_models/Camera.cc
        camera_model/src/camera_models/CameraFactory.cc
        camera_model/src/camera_models/CataCamera.cc
        camera_model/src/camera_models/CostFunctionFactory.cc
        camera_model/src/camera_models/EquidistantCamera.cc
        camera_model/src/camera_models/PinholeCamera.cc
        camera_model/src/camera_models/ScaramuzzaCamera.cc
        camera_model/src/chessboard/Chessboard.cc
        camera_model/src/gpl/EigenQuaternionParameterization.cc
        camera_model/src/gpl/gpl.cc
        camera_model/src/sparse_graph/Transform.cc
        camera_model/src/intrinsic_calib.cc
        camera_model/CMakeLists.txt
        camera_model/instruction
        camera_model/package.xml
        camera_model/readme.md
        config/3dm/3dm_config.yaml
        config/A3/A3_config.yaml
        config/euroc/euroc_config.yaml
        config/euroc/euroc_config_no_extrinsic.yaml
        config/loitor/loitor_config.yaml
        config/AR_demo.rviz
        config/extrinsic_parameter_example.pdf
        config/fisheye_mask.jpg
        config/vins_rviz_config.rviz
        feature_tracker/src/feature_tracker.cpp
        feature_tracker/src/feature_tracker.h
        feature_tracker/src/feature_tracker_node.cpp
        feature_tracker/src/parameters.cpp
        feature_tracker/src/parameters.h
        feature_tracker/src/tic_toc.h
        feature_tracker/CMakeLists.txt
        feature_tracker/package.xml
        support_files/cmake/FindEigen.cmake
        support_files/image/vins.png
        support_files/image/vins_black.png
        support_files/paper/tro_technical_report.pdf
        support_files/brief_k10L6.bin
        support_files/brief_pattern.yml
        vins_estimator/launch/3dm.launch
        vins_estimator/launch/A3.launch
        vins_estimator/launch/euroc.launch
        vins_estimator/launch/euroc_no_extrinsic_param.launch
        vins_estimator/launch/loitor.launch
        vins_estimator/launch/vins_rviz.launch
        vins_estimator/src/factor/imu_factor.h
        vins_estimator/src/factor/integration_base.h
        vins_estimator/src/factor/marginalization_factor.cpp
        vins_estimator/src/factor/marginalization_factor.h
        vins_estimator/src/factor/pose_local_parameterization.cpp
        vins_estimator/src/factor/pose_local_parameterization.h
        vins_estimator/src/factor/projection_factor.cpp
        vins_estimator/src/factor/projection_factor.h
        vins_estimator/src/initial/initial_aligment.cpp
        vins_estimator/src/initial/initial_alignment.h
        vins_estimator/src/initial/initial_ex_rotation.cpp
        vins_estimator/src/initial/initial_ex_rotation.h
        vins_estimator/src/initial/initial_sfm.cpp
        vins_estimator/src/initial/initial_sfm.h
        vins_estimator/src/initial/solve_5pts.cpp
        vins_estimator/src/initial/solve_5pts.h
        vins_estimator/src/loop-closure/ThirdParty/DBoW/BowVector.cpp
        vins_estimator/src/loop-closure/ThirdParty/DBoW/BowVector.h
        vins_estimator/src/loop-closure/ThirdParty/DBoW/DBoW2.h
        vins_estimator/src/loop-closure/ThirdParty/DBoW/FBrief.cpp
        vins_estimator/src/loop-closure/ThirdParty/DBoW/FBrief.h
        vins_estimator/src/loop-closure/ThirdParty/DBoW/FClass.h
        vins_estimator/src/loop-closure/ThirdParty/DBoW/FeatureVector.cpp
        vins_estimator/src/loop-closure/ThirdParty/DBoW/FeatureVector.h
        vins_estimator/src/loop-closure/ThirdParty/DBoW/QueryResults.cpp
        vins_estimator/src/loop-closure/ThirdParty/DBoW/QueryResults.h
        vins_estimator/src/loop-closure/ThirdParty/DBoW/ScoringObject.cpp
        vins_estimator/src/loop-closure/ThirdParty/DBoW/ScoringObject.h
        vins_estimator/src/loop-closure/ThirdParty/DBoW/TemplatedDatabase.h
        vins_estimator/src/loop-closure/ThirdParty/DBoW/TemplatedVocabulary.h
        vins_estimator/src/loop-closure/ThirdParty/DUtils/DException.h
        vins_estimator/src/loop-closure/ThirdParty/DUtils/DUtils.h
        vins_estimator/src/loop-closure/ThirdParty/DUtils/Random.cpp
        vins_estimator/src/loop-closure/ThirdParty/DUtils/Random.h
        vins_estimator/src/loop-closure/ThirdParty/DUtils/Timestamp.cpp
        vins_estimator/src/loop-closure/ThirdParty/DUtils/Timestamp.h
        vins_estimator/src/loop-closure/ThirdParty/DVision/BRIEF.cpp
        vins_estimator/src/loop-closure/ThirdParty/DVision/BRIEF.h
        vins_estimator/src/loop-closure/ThirdParty/DVision/DVision.h
        vins_estimator/src/loop-closure/ThirdParty/VocabularyBinary.cpp
        vins_estimator/src/loop-closure/ThirdParty/VocabularyBinary.hpp
        vins_estimator/src/loop-closure/demoDetector.h
        vins_estimator/src/loop-closure/DLoopDetector.h
        vins_estimator/src/loop-closure/keyframe.cpp
        vins_estimator/src/loop-closure/keyframe.h
        vins_estimator/src/loop-closure/keyframe_database.cpp
        vins_estimator/src/loop-closure/keyframe_database.h
        vins_estimator/src/loop-closure/loop_closure.cpp
        vins_estimator/src/loop-closure/loop_closure.h
        vins_estimator/src/loop-closure/TemplatedLoopDetector.h
        vins_estimator/src/utility/CameraPoseVisualization.cpp
        vins_estimator/src/utility/CameraPoseVisualization.h
        vins_estimator/src/utility/tic_toc.h
        vins_estimator/src/utility/utility.cpp
        vins_estimator/src/utility/utility.h
        vins_estimator/src/utility/visualization.cpp
        vins_estimator/src/utility/visualization.h
        vins_estimator/src/estimator.cpp
        vins_estimator/src/estimator.h
        vins_estimator/src/estimator_node.cpp
        vins_estimator/src/feature_manager.cpp
        vins_estimator/src/feature_manager.h
        vins_estimator/src/parameters.cpp
        vins_estimator/src/parameters.h
        vins_estimator/CMakeLists.txt
        vins_estimator/package.xml
        LICENCE
        README.md
        VINS-Mono.kdev4)
